Added ignore of csv

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 ###########################
+
+########## data ###########
+.csv
+###########################
