Updated .gitignore for latex

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-############ C ############
+#################################################
+####################### C #######################
+#################################################
 # Prerequisites
 *.d
 
@@ -51,10 +53,13 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-###########################
+#################################################
+#################################################
 
 
-########## macOS ##########
+#################################################
+#################### macOS ######################
+#################################################
 # General
 .DS_Store
 .AppleDouble
@@ -82,9 +87,51 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-###########################
+#################################################
+#################################################
 
-########## data ###########
+
+#################################################
+#################### data #######################
+#################################################
 .csv
 *.csv
-###########################
+#################################################
+#################################################
+
+
+#################################################
+################### LaTeX #######################
+#################################################
+# LaTeX temporary files
+*.aux
+*.log
+*.toc
+
+# PDF output - usually a bad idea to keep this in Git
+*.pdf
+
+# Latexmk
+*.fdb_latexmk
+
+# SyncTeX
+*.synctex.gz
+
+# LaTeX Beamer
+*.snm
+*.vrb
+*.nav
+*.out
+
+# BibTeX
+*.bbl
+*.blg
+
+# Log created by Adobe Reader (in Windows)
+C:\\nppdf32Log\\debuglog.txt
+
+# Sublime Text Project Files (usually contain absolute paths)
+*.sublime-project
+*.sublime-workspace
+#################################################
+#################################################
