Added saved csv results and accepted them in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -94,8 +94,8 @@ Temporary Items
 #################################################
 #################### data #######################
 #################################################
-.csv
-*.csv
+#.csv
+./*.csv
 #################################################
 #################################################
 
